--- a/chamber/directory.html
+++ b/chamber/directory.html
@@ -13,13 +13,13 @@
   <meta property="og:image" content="images/social-preview.jpg" />
   <meta property="og:url" content="https://yourdomain.com" />
 
-  <link rel="icon" href="images/favicon.ico" type="image/x-icon" />
+  <link rel="icon" href="images/shopping-6125344_640.png" type="image/x-icon" />
   <link rel="stylesheet" href="styles/directory.css" />
 </head>
 <body>
   <header>
     <div class="logo">
-      <img src="images/logo.png" alt=" Kowes Plaza Chamber Logo" />
+      <img src="images/shopping-6125344_640.png" alt=" Kowes Plaza Chamber Logo" />
       <h1>Kowe Plaza Chamber of Commerce</h1>
     </div>
 
