--- a/chamber/directory.html
+++ b/chamber/directory.html
@@ -20,7 +20,7 @@
   <header>
     <div class="logo">
       <img src="images/shopping-6125344_640.png" alt=" Kowes Plaza Chamber Logo" />
-      <h1>Kowe Plaza Chamber of Commerce</h1>
+      <h1>Kowe Plaza Chamber of Commerce Discover Memebrs/Business</h1>
     </div>
 
     <button id="hamburger" aria-label="Toggle Navigation">☰</button>
