--- a/chamber/directory.html
+++ b/chamber/directory.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <meta name="description" content="Kowes Plaza Chamber of Commerce - Supporting Local Business Growth" />
   <meta name="author" content="Tochukwu Carl-Mbanefo" />
-  <title>Kowes Plaza Chamber Commerce/</title>
+  <title>Kowes Plaza Chamber Commerce</title>
 
   <!-- Social Media Meta -->
   <meta property="og:title" content="Kowes Plaza Chamber of Commerce" />
